--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ wheels/
 /models
 /configs/*
 !/configs/*.yaml
-/projects/BorderMask
+/projects/BorderMasks
 /projects/LOD-Net-ab
 /projects/LOD-Net/config/LOD_test.yaml
 /projects/LOD-Net/model_params.py
@@ -60,6 +60,8 @@ ap_cal.py
 display.py
 evaluate.py
 visualization.py
+
+!/figs
 
 #others
 .circleci
